stuff + untested new transfer concept
my commit habits have gone down the drain